First part of the project

--- a/mysite/website/templates/website/layout.html
+++ b/mysite/website/templates/website/layout.html
@@ -11,6 +11,7 @@
     {%load static %}
     <!-- Custom styles for this template -->
     <link href="{% static 'website/css/cover.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="{% static 'website/image/favicon.ico' %}"/>
 
   </head>
 
@@ -49,7 +50,7 @@
 
 
             <footer class="mt-auto text-white-50">
-                <p>Developed with Django and boostrap, by <a href="https://www.linkedin.com/in/dgarries/" class="text-white">@David Garries</a>.</p>
+                <p>Developed with Django and boostrap by <a href="https://www.linkedin.com/in/dgarries/" class="text-white">@David Garries</a>.</p>
             </footer>
         </div> <!-- main div body -->
 
